--- a/doc/graph.css
+++ b/doc/graph.css
@@ -32,6 +32,10 @@ tr.deduced_param_0 {
 th {
     text-align: right;
 }
+.comment {
+    color: #3f3f3f;
+    font-style: italic;
+}
 .cxx_concept {
     font-weight: bold;
 }
